# sc-runner

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: image.yml  release.yml
image/: Dockerfile
src/sc_runner/: __init__.py  cli.py  cloud_meta.py  data.py  runner.py
src/sc_runner/resources/: __init__.py  alicloud.py  aws.py  azure.py  azure_dbaas.py  base.py  gcp.py  gcp_dbaas.py  gcp_project.py  hcloud.py  managed_db.py  multi_vm.py  ovh.py  upcloud.py  vultr.py
tests/: test_alicloud_regions.py  test_azure_dbaas.py  test_data_prices.py  test_gcp_dbaas.py  test_gcp_project.py  test_multi_vm.py  test_runner_destroy.py  test_vultr_regions.py
